--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ tesing the pull command
 testing the merging option to master
 testing the fetch and merging
 fetching falloed by merging
+only pull testing
