--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ testing the merging option to master
 testing the fetch and merging
 fetching falloed by merging
 only pull testing
+testing the remote branches
